--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         </div>
 
-        <img src="art.png" alt="Confused alien driving a spaceship" width="600" height="600"> 
+        <img src="assets/art.png" alt="Confused alien driving a spaceship" width="600" height="600"> 
 
         <div id="text">
             <h1>Rocky Trip!</h1>
