--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
         <img src="assets/art.png" alt="Confused alien driving a spaceship" width="600" height="600"> 
 
-        <div id="text">
+       <!-- <div id="text">
             <h1>Rocky Trip!</h1>
             <p>Avoid flying into the rocks!</p>
             <p>To jump, you can use W, Space, or the up button.</p>
-        </div>
+        </div> -->
     </div>
 </body> 
 </html> 
